--- a/src/css/main.css
+++ b/src/css/main.css
@@ -92,13 +92,14 @@ a {
   top: 0;
   right: -100%;
   width: 350px;
-  min-height: 100vh;
+  height: 100vh;
   padding: 20px;
   background-color: rgb(241, 241, 241);
   box-shadow: -2px 0 4px hsla(0deg, 4%, 15%, 0.1);
   transition: 0.3s;
+  overflow: scroll;
 }
-.header .nav .navContainer .cart.active {
+.header .nav .navContainer .cart.activeCart {
   right: 0;
 }
 .header .nav .navContainer .cart .cartTitle {
@@ -230,16 +231,8 @@ a {
   width: 100%;
   object-fit: cover;
 }
-.main .hero .wave {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 10%;
-  z-index: 1;
-}
 .main .planes {
-  height: 120vh;
+  /* height: 100vh; */
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
@@ -312,11 +305,196 @@ a {
 .main .planes .planesContainer .card .cardContainer .cardCta {
   background: rgb(255, 199, 108);
   background: linear-gradient(90deg, rgb(255, 199, 108) 0%, rgb(252, 163, 17) 100%, rgb(2, 0, 36) 100%);
-  padding: 8px 8px;
+  padding: 12px 8px;
   border-radius: 50px;
+  border: none;
 }
 .main .planes .planesContainer .card .cardContainer .cardCta:hover {
   background: #fca311;
+}
+.main .calculadoras {
+  margin-top: 80px;
+  background-color: #14213D;
+  width: 100%;
+  height: 100%;
+  padding: 40px;
+}
+.main .calculadoras .calculadorasTitle {
+  font-size: 3rem;
+  font-weight: 700;
+  color: #fafafa;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.main .calculadoras .calculadorasContainer {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+  justify-items: center;
+}
+.main .calculadoras .calculadorasContainer .caloriasBasal {
+  min-width: 300px;
+  padding: 8px 24px;
+  background: #fafafa;
+  box-shadow: 0 4px 8px -3px rgba(0, 0, 0, 0.3);
+  border-radius: 20px;
+}
+.main .calculadoras .calculadorasContainer .caloriasBasal .caloriesTitle {
+  text-align: center;
+  background: #222;
+  color: #fff;
+  margin: -10px -24px;
+  margin-bottom: 10px;
+  padding: 16px;
+}
+.main .calculadoras .calculadorasContainer .caloriasBasal .caloriesControls form {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+.main .calculadoras .calculadorasContainer .caloriasBasal .caloriesControls form h3 {
+  font-size: 15px;
+  text-transform: uppercase;
+  margin: 16px 0 10px 0;
+}
+.main .calculadoras .calculadorasContainer .caloriasBasal .caloriesControls form input[type=text] {
+  width: 100%;
+  padding: 4px 16px;
+  font-size: 24px;
+  font-weight: bold;
+  border: 1px solid #d5dbdd;
+}
+.main .calculadoras .calculadorasContainer .caloriasBasal .caloriesControls form input[type=text].invalidBMR {
+  border: 1px solid red;
+}
+.main .calculadoras .calculadorasContainer .caloriasBasal .caloriesControls form .gender #famale {
+  margin-left: 20px;
+}
+.main .calculadoras .calculadorasContainer .caloriasBasal .caloriesControls form .altura, .main .calculadoras .calculadorasContainer .caloriasBasal .caloriesControls form .peso {
+  position: relative;
+}
+.main .calculadoras .calculadorasContainer .caloriasBasal .caloriesControls form .altura .unit, .main .calculadoras .calculadorasContainer .caloriasBasal .caloriesControls form .peso .unit {
+  position: absolute;
+  right: 20px;
+  top: 50px;
+  color: #777;
+}
+.main .calculadoras .calculadorasContainer .caloriasBasal .caloriesControls form .result {
+  text-align: center;
+  color: #4e4e4e;
+  font-size: 18px;
+}
+.main .calculadoras .calculadorasContainer .caloriasBasal .caloriesControls form .result .calculateCaloriesBtn {
+  padding: 8px 24px;
+  margin: 16px 0;
+  font-size: 18px;
+  font-weight: 100;
+  text-transform: uppercase;
+  border: none;
+  background: #333;
+  color: #fff;
+  cursor: pointer;
+  margin-bottom: 32px;
+}
+.main .calculadoras .calculadorasContainer .caloriasBasal .caloriesControls form .result .resultMessage .calories {
+  color: green;
+  font-size: 38px;
+  font-weight: 900;
+  margin-right: 8px;
+  vertical-align: middle;
+}
+.main .calculadoras .calculadorasContainer .caloriasBasal .caloriesControls form .result .errorMessage {
+  color: red;
+  font-size: 14px;
+  display: none;
+}
+.main .calculadoras .calculadorasContainer .caloriasBasal .caloriesControls form .result .errorMessage.activeBMR {
+  display: block;
+}
+.main .calculadoras .calculadorasContainer .imc {
+  min-width: 300px;
+  min-height: 500px;
+  padding: 8px 24px;
+  background: #fafafa;
+  box-shadow: 0 4px 8px -3px rgba(0, 0, 0, 0.3);
+  border-radius: 20px;
+}
+.main .calculadoras .calculadorasContainer .imc .imcTitle {
+  text-align: center;
+  background: #222;
+  color: #fff;
+  margin: -10px -24px;
+  margin-bottom: 10px;
+  padding: 16px;
+}
+.main .calculadoras .calculadorasContainer .imc .imcControls form {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+.main .calculadoras .calculadorasContainer .imc .imcControls form h3 {
+  font-size: 15px;
+  text-transform: uppercase;
+  margin: 16px 0 10px 0;
+}
+.main .calculadoras .calculadorasContainer .imc .imcControls form input[type=text] {
+  width: 100%;
+  padding: 4px 16px;
+  font-size: 24px;
+  font-weight: bold;
+  border: 1px solid #d5dbdd;
+}
+.main .calculadoras .calculadorasContainer .imc .imcControls form input[type=text].invalidIMC {
+  border: 1px solid red;
+}
+.main .calculadoras .calculadorasContainer .imc .imcControls form .imcAltura, .main .calculadoras .calculadorasContainer .imc .imcControls form .imcPeso {
+  position: relative;
+}
+.main .calculadoras .calculadorasContainer .imc .imcControls form .imcAltura .unit, .main .calculadoras .calculadorasContainer .imc .imcControls form .imcPeso .unit {
+  position: absolute;
+  right: 20px;
+  top: 50px;
+  color: #777;
+}
+.main .calculadoras .calculadorasContainer .imc .imcControls form .imcResult {
+  text-align: center;
+  color: #4e4e4e;
+  font-size: 18px;
+}
+.main .calculadoras .calculadorasContainer .imc .imcControls form .imcResult .calculateImcBtn {
+  padding: 8px 24px;
+  margin: 16px 0;
+  font-size: 18px;
+  font-weight: 100;
+  text-transform: uppercase;
+  border: none;
+  background: #333;
+  color: #fff;
+  cursor: pointer;
+  margin-bottom: 32px;
+}
+.main .calculadoras .calculadorasContainer .imc .imcControls form .imcResult .resultImcMessage .imcResultText {
+  color: green;
+  font-size: 38px;
+  font-weight: 900;
+  margin-right: 8px;
+  vertical-align: middle;
+}
+.main .calculadoras .calculadorasContainer .imc .imcControls form .imcResult .errorImcMessage {
+  color: red;
+  font-size: 14px;
+  display: none;
+}
+.main .calculadoras .calculadorasContainer .imc .imcControls form .imcResult .errorImcMessage.activeIMC {
+  display: block;
+}
+.main .calculadoras .calculadorasContainer .imc .imcControls form .imcResult .infoResult ul {
+  list-style: none;
+  text-align: justify;
+}
+.main .calculadoras .calculadorasContainer .imc .imcControls form .imcResult .infoResult li {
+  padding-top: 10px;
+  font-size: 13px;
 }
 
 @media (min-width: 768px) {
